--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "electron main.js",
     "start-hot": "cross-env HOT=1 electron main.js",
     "dev": "concurrently --kill-others \"npm run watch\" \"npm run start-hot\"",
-    "lint": "jshint app *.js",
+    "lint": "eslint app *.js",
     "clean": "rm -rf ./dist",
     "clean:osx": "rm -rf ./dist/osx",
     "clean:win": "rm -rf ./dist/win",
@@ -47,10 +47,16 @@
     "dicom-parser": "^1.4.1",
     "electron-packager": "^7.0.1",
     "electron-prebuilt": "^1.0.1",
-    "jshint": "^2.9.2",
-    "jshint-loader": "^0.8.3",
+    "eslint": "^2.10.2",
+    "eslint-loader": "^1.3.0",
+    "eslint-plugin-react": "^5.1.1",
+    "jsx-loader": "^0.13.2",
     "rxjs": "^5.0.0-beta.7",
     "webpack": "^1.13.0",
     "webpack-dev-server": "^1.14.1"
+  },
+  "dependencies": {
+    "react": "^15.0.2",
+    "react-dom": "^15.0.2"
   }
 }
