--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
   },
   "homepage": "https://github.com/scitran/organizer#readme",
   "devDependencies": {
+    "angular": "^1.5.7",
+    "angular-ui-router": "^0.3.1",
     "concurrently": "^2.0.0",
     "cross-env": "^1.0.7",
     "dicom-parser": "^1.4.1",
@@ -51,6 +53,7 @@
     "eslint-loader": "^1.3.0",
     "eslint-plugin-react": "^5.1.1",
     "jsx-loader": "^0.13.2",
+    "react-router": "^2.4.1",
     "rxjs": "^5.0.0-beta.7",
     "webpack": "^1.13.0",
     "webpack-dev-server": "^1.14.1"
