--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "homepage": "https://github.com/scitran/organizer#readme",
   "devDependencies": {
+    "adm-zip": "^0.4.7",
     "angular": "^1.5.7",
     "angular-ui-router": "^0.3.1",
     "concurrently": "^2.0.0",
@@ -52,14 +53,12 @@
     "eslint": "^2.10.2",
     "eslint-loader": "^1.3.0",
     "eslint-plugin-react": "^5.1.1",
-    "jsx-loader": "^0.13.2",
-    "react-router": "^2.4.1",
+    "json-loader": "^0.5.4",
     "rxjs": "^5.0.0-beta.7",
     "webpack": "^1.13.0",
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
-    "react": "^15.0.2",
-    "react-dom": "^15.0.2"
+    "request": "^2.65.0"
   }
 }
