Add new icon files

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "scitran-organizer",
-  "productName": "SciTran Organizer",
+  "productName": "Organizer",
   "version": "0.0.1",
   "description": "SciTran Data Organizer",
   "main": "main.js",
