--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "electron main.js",
     "start-hot": "cross-env HOT=1 electron main.js",
-    "dev": "concurrently --kill-others \"npm run watch\" \"npm run start-hot\"",
+    "dev": "concurrently --kill-others \"gulp sass:watch\" \"npm run watch\" \"npm run start-hot\"",
     "lint": "eslint app *.js",
     "clean": "rm -rf ./build ./css ./dist",
     "clean:osx": "rm -rf ./dist/osx",
@@ -41,6 +41,7 @@
   "devDependencies": {
     "concurrently": "^2.2.0",
     "cross-env": "^1.0.8",
+    "css-loader": "^0.24.0",
     "electron-packager": "^7.0.7",
     "electron-prebuilt": "^1.3.4",
     "eslint": "^2.13.1",
@@ -48,6 +49,7 @@
     "gulp": "^3.9.1",
     "gulp-sass": "^2.3.2",
     "json-loader": "^0.5.4",
+    "style-loader": "^0.13.1",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.15.0"
   },
