--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "clean:osx": "rm -rf ./dist/osx",
     "clean:win": "rm -rf ./dist/win",
     "pack": "npm run pack:osx && npm run pack:win",
-    "pack:osx": "npm run clean && npm run webpack && electron-packager . --out=dist/osx --platform=darwin --arch=x64 --icon=assets/osx/logo.icns --prune --ignore=assets --ignore=dist --ignore=scss",
+    "pack:osx": "npm run clean && npm run lint && npm run webpack && electron-packager . --out=dist/osx --platform=darwin --arch=x64 --icon=assets/osx/logo.icns --prune --ignore=assets --ignore=dist --ignore=scss",
     "pack:win": "npm run clean && npm run webpack && electron-packager . --out=dist/win --platform=win32 --arch=ia32 --icon=assets/win/logo.ico --prune--ignore=assets --ignore=dist --ignore=scss",
     "webpack": "gulp sass && webpack",
     "watch": "webpack-dev-server --hot --inline",
