set memory usage correctly
closes #51

--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "description": "SciTran Data Organizer",
   "main": "main.js",
   "scripts": {
-    "start": "electron --js-flags=\"--max_old_space_size=4096\" main.js",
-    "start-hot": "cross-env HOT=1 electron --js-flags=\"--max_old_space_size=4096\" main.js",
-    "dev": "concurrently --kill-others \"gulp sass:watch\" \"npm run watch\" \"npm run start-hot\"",
+    "start": "electron main.js",
+    "start-hot": "cross-env HOT=1 electron main.js",
+    "dev": "concurrently --kill-others \"gulp sass sass:watch\" \"npm run watch\" \"npm run start-hot\"",
     "lint": "eslint app *.js",
     "clean": "rm -rf ./build ./css ./dist",
     "clean:osx": "rm -rf ./dist/osx",
@@ -17,7 +17,8 @@
     "pack:win": "npm run clean && npm run webpack && electron-packager . --out=dist/win --platform=win32 --arch=ia32 --icon=assets/win/logo.ico --prune--ignore=assets --ignore=dist --ignore=scss",
     "webpack": "gulp sass && webpack",
     "watch": "webpack-dev-server --hot --inline",
-    "node": "node"
+    "node": "node",
+    "sass": "gulp sass"
   },
   "repository": {
     "type": "git",
