--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "concurrently": "^2.2.0",
     "cross-env": "^1.0.8",
     "css-loader": "^0.24.0",
+    "electron-mocha": "^3.1.1",
     "electron-packager": "^7.0.7",
     "electron-prebuilt": "^1.3.4",
     "eslint": "^2.13.1",
