--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "electron main.js",
     "start-hot": "cross-env HOT=1 electron main.js",
-    "dev": "concurrently --kill-others \"gulp sass sass:watch\" \"npm run watch\" \"npm run start-hot\"",
+    "dev": "concurrently --kill-others \"npm run watch\" \"npm run start-hot\"",
     "lint": "eslint app *.js",
     "clean": "rm -rf ./build ./css ./dist",
     "clean:osx": "rm -rf ./dist/osx",
@@ -16,10 +16,9 @@
     "pack:build": "npm run clean && npm run lint && npm run webpack",
     "pack:osx": "npm run pack:build && electron-packager . --out=dist/osx --platform=darwin --arch=x64 --icon=assets/osx/logo.icns --prune --ignore=assets --ignore=dist --ignore=scss",
     "pack:win": "npm run pack:build && electron-packager . --out=dist/win --platform=win32 --arch=ia32 --icon=assets/win/logo.ico --prune--ignore=assets --ignore=dist --ignore=scss",
-    "webpack": "gulp sass && webpack",
+    "webpack": "webpack",
     "watch": "webpack-dev-server --hot --inline",
-    "node": "node",
-    "sass": "gulp sass"
+    "node": "node"
   },
   "repository": {
     "type": "git",
@@ -48,10 +47,10 @@
     "electron-prebuilt": "^1.3.4",
     "eslint": "^2.13.1",
     "eslint-loader": "^1.5.0",
-    "gulp": "^3.9.1",
-    "gulp-sass": "^2.3.2",
     "json-loader": "^0.5.4",
+    "node-sass": "^3.10.1",
     "raw-loader": "^0.5.1",
+    "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.15.0"
