--- a/package.json
+++ b/package.json
@@ -13,14 +13,30 @@
     "clean": "rm -rf ./build ./css ./dist",
     "clean:osx": "rm -rf ./dist/osx",
     "clean:win": "rm -rf ./dist/win",
-    "pack": "npm run pack:osx && npm run pack:win",
-    "pack:build": "npm run clean && npm run lint && npm run webpack",
-    "pack:osx": "npm run pack:build && electron-packager . --out=dist/osx --platform=darwin --arch=x64 --icon=assets/osx/logo.icns --prune --ignore=assets --ignore=dist --ignore=scss",
-    "pack:win": "npm run pack:build && electron-packager . --out=dist/win --platform=win32 --arch=ia32 --icon=assets/win/logo.ico --prune--ignore=assets --ignore=dist --ignore=scss",
-    "pack:linux": "npm run pack:build && electron-packager . --out=dist/linux --platform=linux --arch=x64 --prune--ignore=assets --ignore=dist --ignore=scss",
+    "prebuild": "npm run clean && npm run lint && npm run webpack",
+    "pack": "npm run build -- --dir",
+    "build": "npm run prebuild && build -lmw",
     "webpack": "webpack",
     "watch": "webpack-dev-server --hot --inline",
     "node": "node"
+  },
+  "directories": {
+    "app": "."
+  },
+  "build": {
+    "appId": "organizer.flywheel.io",
+    "linux": {
+      "target": [
+        "deb",
+        "AppImage"
+      ]
+    },
+    "mac": {
+      "icon": "assets/osx/logo.icns"
+    },
+    "win": {
+      "icon": "assets/win/logo.ico"
+    }
   },
   "repository": {
     "type": "git",
@@ -35,7 +51,7 @@
     "BIDS",
     "OpenfMRI"
   ],
-  "author": "SciTran Team",
+  "author": "SciTran Team <rfrigato@stanford.edu>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/scitran/organizer/issues"
@@ -45,8 +61,8 @@
     "concurrently": "^2.2.0",
     "cross-env": "^1.0.8",
     "css-loader": "^0.24.0",
+    "electron-builder": "^7.14.2",
     "electron-mocha": "^3.1.1",
-    "electron-packager": "^7.0.7",
     "electron-prebuilt": "^1.3.4",
     "eslint": "^2.13.1",
     "eslint-loader": "^1.5.0",
@@ -64,6 +80,7 @@
     "css-loader": "^0.24.0",
     "archiver": "^1.0.1",
     "dicom-parser": "^1.7.4",
+    "electron-squirrel-startup": "^1.0.0",
     "nifti-js": "^1.0.1",
     "request": "^2.74.0",
     "rx": "^4.1.0",
