ensure we are packaging the app bundle and not skipping it.

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "node": "node"
   },
   "directories": {
-    "app": "."
+    "app": ".",
+    "buildResources": "build-resources-named-to-avoid-collisions-with-webpack-output"
   },
   "build": {
     "appId": "organizer.flywheel.io",
