--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "electron main.js",
     "start-hot": "cross-env HOT=1 electron main.js",
     "dev": "concurrently --kill-others \"npm run watch\" \"npm run start-hot\"",
+    "dev-insecure": "concurrently --kill-others \"npm run watch\" \"npm run start-hot -- --ignore-certificate-errors\"",
     "lint": "eslint app *.js",
     "test": "xvfb-maybe electron-mocha renderer ./tests --recursive",
     "clean": "rm -rf ./build ./css ./dist",
